@@ -6,6 +6,7 @@ Before next release:
 [ ] Saving and restoring preferences (Laurent)
 [ ] Search bar to filter books (Zachary, Laurent)
 [ ] i18n (Dafydd)
+[ ] Rating support
 
 Future releases:
 
